--- a/app/src/main/res/layout/employee_item_layout.xml
+++ b/app/src/main/res/layout/employee_item_layout.xml
@@ -1,107 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/photo"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="100dp"
+            android:layout_height="150dp" />
+
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:textSize="12sp"
                 android:text="사원 코드" />
 
             <TextView
                 android:id="@+id/id"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:textSize="12sp"
                 android:text="이름" />
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:textSize="12sp"
                 android:text="전화번호" />
 
             <TextView
                 android:id="@+id/phone"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:textSize="12sp"
                 android:text="이메일" />
 
             <TextView
                 android:id="@+id/email"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:text="TextView" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:textSize="12sp"
                 android:text="직급명" />
 
             <TextView
                 android:id="@+id/position_id"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="12sp"
                 android:text="TextView" />
         </LinearLayout>
     </LinearLayout>
