--- a/app/src/main/res/layout/employee_framgent_view.xml
+++ b/app/src/main/res/layout/employee_framgent_view.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
